# ComfyUI-PolyhedronLoRAStack

./: CHANGELOG_v269.md  CHANGELOG_v301.md  CHANGELOG_v302.md  CHANGELOG_v303.md  CHANGELOG_v304.md  CHANGELOG_v305.md  CHANGELOG_v307.md  CHANGELOG_v313.md  CHANGELOG_v320.md  CHANGELOG_v362.md  COMPATIBILITY.md  LICENSE  MAINTAINING.md  README.md  __init__.py  install.py  pyproject.toml  requirements.txt  uls_preview_gen.py
docs/changelog-archive/: CHANGELOG_v267.md  CHANGELOG_v268.md  CHANGELOG_v270.md  CHANGELOG_v306.md  CHANGELOG_v308.md  CHANGELOG_v309.md  CHANGELOG_v310.md  CHANGELOG_v361.md
example_workflows/: polyhedron_lora_stack_ksampler_base.json  polyhedron_lora_stack_ksampler_lightning.json  polyhedron_lora_stack_wanvideo_accelerator.json  polyhedron_lora_stack_wanvideo_base.json
nodes/: ph_media_loader.py  ph_media_routes.py  ph_media_util.py  ph_save.py  ph_save_util.py  uls_inspector_v3.py  uls_merge_math.py  uls_model_switch.py  uls_pick_frame_v3.py  uls_resolve_inspector.py  uls_resolve_inspector_v3.py  uls_routes.py  uls_stack_node.py  uls_v3_extension.py  wan_frame_inflate.py  wan_frame_inflate_v3.py  wan_model_bridge.py  wan_sigma_schedule.py  wan_split_sigma_v3.py  wan_universal_sigma_v3.py
tests/: test_v259_resolve_gpu.py  test_v261_trim_amount.py  test_v264_merge_analyzer.py  test_v265_interrupt.py  test_v266_analyzer_text.py  test_v267_hardening.py  test_v302_clip_weight.py  test_v309_engine_clip.py  test_v310_engine_header.py  test_v320_stack_polish.py  test_v348_merge_math.py  test_v351_pickframe_v3.py  test_v352_inflate_v3.py  test_v536_diag_set.py  test_v536_preview.py  test_v543_rubrics.py  test_v551_autovideo.py  test_v591_evensave.py  test_v621_save_fps.py  test_v624_solo_selection.py  test_v625_fix_trim.py  test_v626_full_view.py  test_v648_save_rgba.py  test_v653_save_mask_only.py  test_v654_loader_gray_mask.py  test_v655_grid_reread.py  test_v656_busy_overlay.py  test_v657_listing_race.py  test_v661_field_fixes.py  test_v662_drop_intent.py  test_v663_drop_hint.py  test_v664_drop_zones.py  test_v665_drop_locate.py  test_v666_save_video_audio_doc.py
web/js/: ph_media_loader.js  ph_save.js  polyhedron_sigma_inline.js  uls_compat.js  uls_model_switch.js  uls_node.js  uls_styles.css  uls_token_toast.js
