[project]
name = "polyhedron-lora-stack"
version = "2.68.0"
description = "Group-aware LoRA management for ComfyUI: stack 10-25 LoRAs with per-group merge modes (SEQ/CONCAT/DARE), Trim & Resolve cleanup switches against multi-LoRA mush, thumbnails, trigger words, Civitai fetch, a dedicated Accelerator engine and a passive Merge Analyzer."
license = { file = "LICENSE" }
requires-python = ">=3.10"

# The loaded ComfyUI nodes need NEITHER Pillow NOR requests — they degrade
# gracefully (the runtime Civitai fetch uses aiohttp, which ComfyUI already
# ships). Both are needed only by the optional standalone CLI
# `uls_preview_gen.py`, so they are an optional extra, not hard runtime deps.
dependencies = []

classifiers = [
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
cli = [
    "Pillow>=9.0.0",
    "requests>=2.28.0",
]

[project.urls]
Repository = "https://github.com/PolyhedronAI/ComfyUI-PolyhedronLoRAStack"
Documentation = "https://github.com/PolyhedronAI/ComfyUI-PolyhedronLoRAStack/blob/main/docs/Polyhedron_LoRA_Stack_Documentation_v124.pdf"
"Bug Tracker" = "https://github.com/PolyhedronAI/ComfyUI-PolyhedronLoRAStack/issues"

[tool.comfy]
PublisherId = "polyhedron"
DisplayName = "Polyhedron LoRA Stack"
Icon = "https://raw.githubusercontent.com/PolyhedronAI/ComfyUI-PolyhedronLoRAStack/main/assets/icon.png"
Banner = "https://raw.githubusercontent.com/PolyhedronAI/ComfyUI-PolyhedronLoRAStack/main/assets/banner.png"
