[project]
name = "polyhedron-lora-stack"
version = "3.62.0"
description = "The Polyhedron Suite for ComfyUI. Group-aware LoRA management: stack 10-25 LoRAs with per-group merge modes (SEQ/CONCAT/DARE), per-row decoupled CLIP strength, Trim & Resolve cleanup switches against multi-LoRA interference, thumbnails, trigger words, Civitai fetch, a dedicated Accelerator engine and a passive Merge Analyzer. Plus media I/O: a pinned-folder Media Loader (images, video, audio, batch modes) and a unified Save node for stills, video and audio."
license = { file = "LICENSE" }
requires-python = ">=3.10"

# The loaded ComfyUI nodes need NEITHER Pillow NOR requests — they degrade
# gracefully (the runtime Civitai fetch uses aiohttp, which ComfyUI already
# ships). Both are needed only by the optional standalone CLI
# `uls_preview_gen.py`, so they are an optional extra, not hard runtime deps.
dependencies = []

classifiers = [
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
cli = [
    "Pillow>=9.0.0",
    "requests>=2.28.0",
]
# Media Loader / Save extras. Both nodes run without these: OpenCV only adds
# video thumbnails and the dimension probe, and PyAV is already shipped by
# recent ComfyUI builds (it is listed for older ones). Imported lazily, so a
# missing package degrades one feature and never blocks a load.
media = [
    "opencv-python>=4.6.0",
    "av>=10.0.0",
]

[project.urls]
Repository = "https://github.com/PolyhedronAI/ComfyUI-PolyhedronLoRAStack"
Documentation = "https://github.com/PolyhedronAI/ComfyUI-PolyhedronLoRAStack#readme"
"Bug Tracker" = "https://github.com/PolyhedronAI/ComfyUI-PolyhedronLoRAStack/issues"

[tool.comfy]
PublisherId = "polyhedron"
DisplayName = "Polyhedron Suite"
Icon = "https://raw.githubusercontent.com/PolyhedronAI/ComfyUI-PolyhedronLoRAStack/main/assets/icon.png"
Banner = "https://raw.githubusercontent.com/PolyhedronAI/ComfyUI-PolyhedronLoRAStack/main/assets/banner.png"
